--- a/css/index.html
+++ b/css/index.html
@@ -71,7 +71,8 @@
         <h1>CITAC ELEKTRONSKE LICNT KARTE: STAMPA PODATAKA</h1>
 
         <img src="https://pbs.twimg.com/profile_images/730811853891309568/2wSLZ71_.jpg" alt="Pera Peric">
-        <h2 id="naslov2" >Podaci o gradjaninu</h2>
+        <img class="image2" src="https://pbs.twimg.com/profile_images/730811853891309568/2wSLZ71_.jpg" alt="Pera Peric">
+        <h2 id="naslov2">Podaci o gradjaninu</h2>
         <p id="pasus" class="container">rrrrrrrrrrrrrrrr</p>
 
         <table>
@@ -139,37 +140,37 @@
             ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
         </p>
         <p style="color:rgb(0, 206, 209);">
-                1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
-                na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
-                <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-            </p>
-            <p style="color:#00ced1;">
-                    1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
-                    na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
-                    <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                    ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                    ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                </p>
-                <p style="color:hsl(181, 100%, 41%);">
-                        1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
-                        na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
-                        <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                        ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                        ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                    </p>
-                    <p style="color:darkturquoise;">
-                            1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
-                            na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
-                            <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
-                            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
-                        </p>
+            1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
+            na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
+            <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+        </p>
+        <p style="color:#00ced1;">
+            1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
+            na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
+            <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+        </p>
+        <p style="color:hsl(181, 100%, 41%);">
+            1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
+            na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
+            <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+        </p>
+        <p style="color:darkturquoise;">
+            1. U cipu licne karte, podaci o imenu i prezimenu imaoca licne karte ispisani su na nacionalnom pismu onako kako su ispisani
+            na samom obrascu licne karte, dok su ostali podaci ispisani latinickim pismom.
+            <br> 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores inventore, distinctio reprehenderit
+            ad adipisci, autem quidem labore quod fugit suscipit hic quaerat, ex maxime. Inventore itaque libero unde sit.
+        </p>
     </div>
 </body>
 
