--- a/day11/navigation.html
+++ b/day11/navigation.html
@@ -10,68 +10,76 @@
 </head>
 
 <body>
-    <div class="main">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Blog</li>
-            </ul>
-        </nav>
-        <img src="html_css.jpg">
-        <div>
-            <img src="300x200.png"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis delectus in, sunt totam corporis sed aspernatur
-            voluptatem debitis inventore placeat minima iste! Maxime voluptas consectetur provident sunt consequatur, quia
-            dignissimos.
+    <main>
+        <div class="main">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Blog</li>
+                </ul>
+            </nav>
+            <section>
+                <img src="html_css.jpg">
+            </section>
+            <section>
+                <div>
+                    <img src="300x200.png"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis delectus in, sunt totam corporis sed
+                    aspernatur voluptatem debitis inventore placeat minima iste! Maxime voluptas consectetur provident sunt
+                    consequatur, quia dignissimos.
+                </div>
+                <div>
+                    <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ad, explicabo obcaecati deleniti est
+                    vitae laboriosam iure nulla distinctio animi, totam, sit molestias? Commodi, non harum consequatur modi
+                    delectus odit?
+                </div>
+                <div>
+                    <ul>
+                        <li>Rebuilding slack.com</li>
+                        <hr/>
+                        <li>Zasto bootcamp format</li>
+                        <hr/>
+                        <li>React - prozor u svet web aplikacija</li>
+                        <hr/>
+                        <li>Najvece zablude o programerima u Srbiji</li>
+                        <hr/>
+                    </ul>
+                </div>
+                <span class="clearfix"></span>
+                <div>
+                    <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum explicabo modi similique dolorum
+                    et deleniti est, quibusdam inventore rem quia, magni nihil repudiandae velit distinctio vel quisquam
+                    recusandae! Quas!
+                </div>
+                <div>
+                    <img src="300x200.png">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex nesciunt quasi cum voluptatem? Eveniet est
+                    maxime eum veritatis consequatur ipsa, itaque doloremque sint iusto fuga voluptas modi magnam. Expedita,
+                    deserunt. </div>
+                <div>
+                    <img src="300x200.png"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, maxime culpa. Cupiditate earum perspiciatis,
+                    quia repudiandae labore non, fugiat voluptates nostrum doloribus ipsum, expedita magnam dolore. Quo nulla
+                    nesciunt error.
+                </div>
+                <div>
+                    <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quia facere fuga expedita totam provident
+                    ducimus incidunt praesentium necessitatibus, optio voluptates. Velit, accusamus explicabo commodi porro
+                    animi omnis sunt quaerat! </div>
+                <div>
+                    <img src="300x200.png">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quae. Ea cum nihil odit? Exercitationem
+                    dignissimos voluptate pariatur similique amet, officia fugiat, sit itaque voluptatum nesciunt quo neque
+                    odio delectus! </div>
+                <div>
+                    <img src="300x200.png">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat autem cupiditate id error tempore quo,
+                    nulla voluptatem illum inventore magni voluptates facilis soluta iure mollitia odit sunt quasi eos incidunt?
+                    </div>
+            </section>
         </div>
-        <div>
-            <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ad, explicabo obcaecati deleniti est vitae
-            laboriosam iure nulla distinctio animi, totam, sit molestias? Commodi, non harum consequatur modi delectus odit?
-            </div>
-        <div>
-            <ul>
-                <li>Rebuilding slack.com</li>
-                <hr/>
-                <li>Zasto bootcamp format</li>
-                <hr/>
-                <li>React - prozor u svet web aplikacija</li>
-                <hr/>
-                <li>Najvece zablude o programerima u Srbiji</li>
-                <hr/>
-            </ul>
-        </div>
-        <span class="clearfix"></span>
-        <div>
-            <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum explicabo modi similique dolorum et
-            deleniti est, quibusdam inventore rem quia, magni nihil repudiandae velit distinctio vel quisquam recusandae!
-            Quas!
-        </div>
-        <div>
-            <img src="300x200.png">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex nesciunt quasi cum voluptatem? Eveniet est maxime
-            eum veritatis consequatur ipsa, itaque doloremque sint iusto fuga voluptas modi magnam. Expedita, deserunt. </div>
-        <div>
-            <img src="300x200.png"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, maxime culpa. Cupiditate earum perspiciatis,
-            quia repudiandae labore non, fugiat voluptates nostrum doloribus ipsum, expedita magnam dolore. Quo nulla nesciunt
-            error.
-        </div>
-        <div>
-            <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quia facere fuga expedita totam provident ducimus
-            incidunt praesentium necessitatibus, optio voluptates. Velit, accusamus explicabo commodi porro animi omnis sunt
-            quaerat! </div>
-        <div>
-            <img src="300x200.png">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quae. Ea cum nihil odit? Exercitationem dignissimos
-            voluptate pariatur similique amet, officia fugiat, sit itaque voluptatum nesciunt quo neque odio delectus! </div>
-        <div>
-            <img src="300x200.png">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat autem cupiditate id error tempore quo, nulla
-            voluptatem illum inventore magni voluptates facilis soluta iure mollitia odit sunt quasi eos incidunt? </div>
 
-    </div>
-
-    <footer>
-        <p> &copy; Bit Student</p>
-    </footer>
-
+        <footer>
+            <p> &copy; Bit Student</p>
+        </footer>
+    </main>
 </body>
 
 </html>
