--- a/week3/day4/index.html
+++ b/week3/day4/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
@@ -17,7 +17,8 @@
             <h1>we shape our buildings thereafrer they shape us</h1>
             <a href="#/">read more</a>
         </div>
-        <h2><span>Build</span>Estate</h2>
+        <h2>
+            <span>Build</span>Estate</h2>
         <nav>
             <ul>
                 <li>Home</li>
@@ -37,10 +38,14 @@
                 </q>
             </p>
             <ul>
-                <li><span class="fas fa-arrow-right"></span>International Office Buildings.</li>
-                <li><span class="fas fa-arrow-right"></span>Apartment On Premier Houser.</li>
-                <li><span class="fas fa-arrow-right"></span>Price Are Low &#38; Parking Allowance.</li>
-                <li><span class="fas fa-arrow-right"></span>Best Design Architecture.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>International Office Buildings.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Apartment On Premier Houser.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Price Are Low &#38; Parking Allowance.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Best Design Architecture.</li>
             </ul>
             <img src="images/about.jpg" alt="image1">
             <h3>We make your Dream Home</h3>
@@ -51,18 +56,31 @@
                 </q>
             </p>
             <ul>
-                <li><span class="fas fa-arrow-right"></span>Great Engineer Ideas.</li>
-                <li><span class="fas fa-arrow-right"></span>Planning For Future Model Buildings.</li>
-                <li><span class="fas fa-arrow-right"></span>Modern Apartment With Large Space.</li>
-                <li><span class="fas fa-arrow-right"></span>New Residential Complex Features.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Great Engineer Ideas.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Planning For Future Model Buildings.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>Modern Apartment With Large Space.</li>
+                <li>
+                    <span class="fas fa-arrow-right"></span>New Residential Complex Features.</li>
             </ul>
         </section>
         <section>
             <h2>What People Says</h2>
             <div>
                 <div>
-                    <img src="images/t1.jpg" alt="williamson">
-                    <h6>Williamson</h6>
+                    <span>
+                        <img src="images/t1.jpg" alt="williamson">
+                        <h6>Williamson</h6>
+                    </span>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ullam placeat soluta, iusto velit voluptate
                         pariatur veritatis fuga cum nisi expedita error corrupti optio saepe. Qui porro omnis ab voluptate.
                     </p>
@@ -70,8 +88,17 @@
             </div>
             <div>
                 <div>
-                    <h6>Jenifer Lopez</h6>
-                    <img src="images/t2.jpg" alt="Jennifer Lopez">
+                    <span>
+                        <img src="images/t2.jpg" alt="Jennifer Lopez">
+                        <h6>Jenifer Lopez</h6>
+                    </span>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ullam placeat soluta, iusto velit voluptate
                         pariatur veritatis fuga cum nisi expedita error corrupti optio saepe. Qui porro omnis ab voluptate.
                     </p>
@@ -79,8 +106,17 @@
             </div>
             <div>
                 <div>
-                    <h6>Selena Gomez</h6>
-                    <img src="images/t3.jpg" alt="Selena Gomez">
+                    <span>
+                        <img src="images/t3.jpg" alt="Selena Gomez">
+                        <h6>Selena Gomez</h6>
+                    </span>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ullam placeat soluta, iusto velit voluptate
                         pariatur veritatis fuga cum nisi expedita error corrupti optio saepe. Qui porro omnis ab voluptate.
                     </p>
@@ -92,29 +128,36 @@
             <div class="contact">
                 <h4>Contact us</h4>
                 <ul>
-                    <li><span class="fas fa-mobile"></span>+0(12) 000 1123 3120</li>
-                    <li><span class="fas fa-envelope"></span>mail@example.com</li>
+                    <li>
+                        <span class="fas fa-mobile"></span>+0(12) 000 1123 3120</li>
+                    <li>
+                        <span class="fas fa-envelope"></span>mail@example.com</li>
                 </ul>
             </div>
             <div class="social">
                 <h4>Connect us</h4>
-                <ul >
+                <ul>
                     <li class="fab fa-facebook-f"></li>
                     <li class="fab fa-twitter"></li>
                     <li class="fas fa-rss"></li>
                     <li class="fab fa-vk"></li>
                 </ul>
             </div>
-            <div>
-                <address>
-                    
-                    <h4><span class="fas fa-map-marker"></span>1680 Richmond St, corner in, ON N58 3d7, USA</h4>  
-                </address>
+            <div class="address">
+                <div>
+                    <address>
+                        <h4>
+                            <span class="fas fa-map-marker"></span>1680 Richmond St, corner in, ON N58 3d7, USA</h4>
+                    </address>
+                </div>
             </div>
         </section>
         <section>
             <img src="images/about.jpg" alt="image2">
-            <map name="Location"></map>
+            <map name="Location">
+                <iframe width="100%" height="315" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.744977118772!2d20.455167015896816!3d44.806385679098696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7aa9c08b61e5%3A0x3ee3e8a176a39372!2z0J3QtdC80LDRmtC40L3QsCA0LCDQkdC10L7Qs9GA0LDQtA!5e0!3m2!1ssr!2srs!4v1517826293409"
+                    allowfullscreen></iframe>
+            </map>
             <h2>Mail us</h2>
             <form action="POST" action="/action_page.php">
                 <input type="text" name="name" placeholder="Name">
@@ -129,7 +172,17 @@
             </form>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Stats</li>
+            <li>Agents</li>
+            <li>Testimonials</li>
+        </ul>
+        <p>&#169; Build Estates. All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
