--- a/week3/day4/index.html
+++ b/week3/day4/index.html
@@ -31,40 +31,45 @@
     <main>
         <section>
             <h2>Who we are</h2>
-            <h3>Welcome to our build estate</h3>
-            <p>
-                <q>
-                    If you can build buildings, why sit on the beach? We always think fo buildings in their settings, bot so do other architects.
-                </q>
-            </p>
-            <ul>
-                <li>
-                    <span class="fas fa-arrow-right"></span>International Office Buildings.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Apartment On Premier Houser.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Price Are Low &#38; Parking Allowance.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Best Design Architecture.</li>
-            </ul>
-            <img src="images/about.jpg" alt="image1">
-            <h3>We make your Dream Home</h3>
-            <p>
-                <q>
-                    For decades engineers have stood accused that their building do not have any cultural value. We have attempted to liberate
-                    engineering of this accusation.
-                </q>
-            </p>
-            <ul>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Great Engineer Ideas.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Planning For Future Model Buildings.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>Modern Apartment With Large Space.</li>
-                <li>
-                    <span class="fas fa-arrow-right"></span>New Residential Complex Features.</li>
-            </ul>
+            <div class="float">
+                <h3>Welcome to our build estate</h3>
+                <p>
+                    <q>
+                        If you can build buildings, why sit on the beach? We always think fo buildings in their settings, bot so do other architects.
+                    </q>
+                </p>
+                <ul>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>International Office Buildings.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Apartment On Premier Houser.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Price Are Low &#38; Parking Allowance.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Best Design Architecture.</li>
+                </ul>
+            </div>
+
+            <img class="float" src="images/about.jpg" alt="image1">
+            <div class="float"> 
+                <h3>We make your Dream Home</h3>
+                <p>
+                    <q>
+                        For decades engineers have stood accused that their building do not have any cultural value. We have attempted to liberate
+                        engineering of this accusation.
+                    </q>
+                </p>
+                <ul>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Great Engineer Ideas.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Planning For Future Model Buildings.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>Modern Apartment With Large Space.</li>
+                    <li>
+                        <span class="fas fa-arrow-right"></span>New Residential Complex Features.</li>
+                </ul>
+            </div>
         </section>
         <section>
             <h2>What People Says</h2>
@@ -125,7 +130,7 @@
         </section>
         <section>
             <h2>Ger in touch with us</h2>
-            <div class="contact">
+            <div class="contact float">
                 <h4>Contact us</h4>
                 <ul>
                     <li>
@@ -134,7 +139,7 @@
                         <span class="fas fa-envelope"></span>mail@example.com</li>
                 </ul>
             </div>
-            <div class="social">
+            <div class="social float">
                 <h4>Connect us</h4>
                 <ul>
                     <li class="fab fa-facebook-f"></li>
@@ -143,7 +148,7 @@
                     <li class="fab fa-vk"></li>
                 </ul>
             </div>
-            <div class="address">
+            <div class="address float">
                 <div>
                     <address>
                         <h4>
