--- a/day11/navigation.html
+++ b/day11/navigation.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="navigation.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <title>Document</title>
 </head>
 
@@ -13,11 +15,19 @@
     <main>
         <div class="main">
             <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Blog</li>
+                <ul class="nav nav-pills nav-fill">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Blog</a>
+                    </li>
                 </ul>
             </nav>
             <section>
@@ -65,14 +75,14 @@
                     <img src="300x200.png"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quia facere fuga expedita totam provident
                     ducimus incidunt praesentium necessitatibus, optio voluptates. Velit, accusamus explicabo commodi porro
                     animi omnis sunt quaerat! </div>
-                <div>
+                <div class="btn">
                     <img src="300x200.png">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, quae. Ea cum nihil odit? Exercitationem
                     dignissimos voluptate pariatur similique amet, officia fugiat, sit itaque voluptatum nesciunt quo neque
                     odio delectus! </div>
                 <div>
                     <img src="300x200.png">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat autem cupiditate id error tempore quo,
                     nulla voluptatem illum inventore magni voluptates facilis soluta iure mollitia odit sunt quasi eos incidunt?
-                    </div>
+                </div>
             </section>
         </div>
 
@@ -80,6 +90,12 @@
             <p> &copy; Bit Student</p>
         </footer>
     </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
