--- a/week5/DOM/practice1/index.html
+++ b/week5/DOM/practice1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dom.css">
+    <link rel="stylesheet" href="main.css">
     
     <title>Document</title>
 </head>
@@ -28,6 +28,6 @@
         <li>xxx</li>
     </ul>
 
-    <script src="dom.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
