--- a/week5/DOM/practice2/index.html
+++ b/week5/DOM/practice2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dom2.css">
+    <link rel="stylesheet" href="main.css">
 
     <title>Document</title>
 </head>
@@ -28,7 +28,7 @@
     </div>
 
 
-    <script src="dom2.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
