--- a/week5/Festival-practice/index.html
+++ b/week5/Festival-practice/index.html
@@ -7,19 +7,55 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <title>Document</title>
 </head>
 
-<body>
+<body class="container bg-light">
+    <form>
+        <div class="border p-5 m-5">
+            <div class="form-group">
+                <label for="MovieTitle">Title</label>
+                <input type="text" class="form-control" id="MovieTitle" placeholder="Title">
+            </div>
+            <div class="form-group">
+                <label for="MovieLength">Length (min)</label>
+                <input type="number" class="form-control" id="MovieLength" placeholder="Length in min">
+            </div>
+            <div class="form-group">
+                <label for="MovieGenre">Genre</label>
+                <select class="form-control" id="MovieGenre">
+                    <option value="">-</option>
+                    <option value="Drama">Drama</option>
+                    <option value="Action">Action</option>
+                    <option value="Horror">Horror</option>
+                    <option value="Comedy">Comedy</option>
+                </select>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-xl-6">
+                    <div id="error-movie"></div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-6">
+                    <div id="movie-list">
+                        <ul></ul>
+                    </div>
+                </div>
+            </div>
+
+            <input type="button" class="btn btn-primary btn-block" id="create-movie" value="Add Movie">
+        </div>
+    </form>
 
 
-    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="entities.js" type="text/javascript"></script>
+    <script src="form.js" type="text/javascript"></script>
 </body>
 
 </html>
